# rf_log_mcp

./: .gitignore  README.md  debug_service.py  project.md  pyproject.toml
src/rf_log_mcp/: __init__.py  __main__.py  constants.py  errors.py  views.py
src/rf_log_mcp/domain/: models.py  schemas.py
src/rf_log_mcp/parsers/: __init__.py  gating.py  json_adapter.py  result_adapter.py  xml_adapter.py
src/rf_log_mcp/server/: __init__.py  app.py
src/rf_log_mcp/storage/: sqlite_store.py
tests/: conftest.py  helpers.py  test_parsers.py  test_server.py  test_service.py
tests/fixture_sources/: errors_and_long.robot  nested_failure.robot  single_failure.robot
tests/fixtures/: broken.json  broken.xml  errors_and_long_611.xml  errors_and_long_72.json  invalid.txt  nested_failure_611.xml  output-20260413-151651.xml  single_failure_602.xml  single_failure_611.xml  single_failure_71.json  single_failure_72.json  single_failure_74.xml
